added functions and math

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,8 +7,8 @@ Highlight:  #C2CF52
 
 //Sass Variables
 $basefont: "Comic Sans MS", san-serif;
-$background: lightgreen;
-$accent: #c2cf00;
+$background: saturate(#D6ACA2, 20%);
+$accent:lighten(#c2cf00, 20%);
 $base: #f00;
 
 
