--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ button {
 
 /* videofitness styles */
 body {
-  background-color: lightgreen;
+  background-color: #e3a495;
   font-family: "Trebuchet MS", san-serif;
   font-size: 80%;
 }
@@ -147,7 +147,7 @@ body {
 header {
   height: 125px;
   background: transparent url(../images/logo.png) no-repeat 0 18px;
-  border-bottom: 2px solid #c2cf00;
+  border-bottom: 2px solid #f2ff36;
   position: relative;
   margin-bottom: 25px;
 }
