Changed base color

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@ Highlight:  #C2CF52
 $basefont: "Comic Sans MS", san-serif;
 $background: saturate(#D6ACA2, 20%);
 $accent:lighten(#c2cf00, 20%);
-$base: #f00;
+$base: blue;
 
 
 //Mixin
